--- a/src/app/views/outlets-details/outlets-details/outlets-details.component.html
+++ b/src/app/views/outlets-details/outlets-details/outlets-details.component.html
@@ -66,6 +66,21 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-3 m-auto">
+            <div class="input-group mb-3 _filter">
+                <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1">
+                        <mdb-icon fas icon="search" aria-hidden="true"></mdb-icon>
+                    </span>
+                  </div>
+                  
+              </div>
+
+
+        </div>
+    </div>
 </div>
     <hr class="my-3">
 
