--- a/src/app/main-layout/login/login.component.html
+++ b/src/app/main-layout/login/login.component.html
@@ -67,7 +67,7 @@
               <p class="dark-grey-text text-right d-flex justify-content-center mb-3 pt-2">or<a href="#" class="blue-text ml-1">Continue as Guest </a></p>
               <div class="modal-footer mx-5 pt-3 mb-1">
                 <p class="font-small grey-text d-flex justify-content-end">Not Signed Up?
-                  <a data-dismiss="modal" class="red-text ml-1" data-toggle="modal" data-target="#basicExample" (click)="register.show()" mdbWavesEffect>Sign Up Here</a>
+                  <a data-dismiss="modal" class="red-text ml-1" data-toggle="modal" data-target="#basicExample" (click)="openRegisterModal()" mdbWavesEffect>Sign Up Here</a>
                 </p>
               </div>
             <!-- <div class="modal-footer">
