--- a/src/app/views/outlets-details/outlets-details/outlets-details.component.html
+++ b/src/app/views/outlets-details/outlets-details/outlets-details.component.html
@@ -24,18 +24,17 @@
         
                 <!-- Grid column -->
                 <div class="col-lg-8 col-md-7">
-                    <h5 class="font-weight-bold"><a><strong>Shad Indian</strong></a></h5>
+                    <h5 class="font-weight-bold"><a><strong>{{restaurantObj.restaurant_name}}</strong></a></h5>
                     <a href="#!" class="green-text">
                         <h6 class="font-weight-bold mb-3">
                             <mdb-icon fas icon="utensils" class="pr-2" size="lg"></mdb-icon>
-                            <small class="text-muted">• Rice &amp; Curry •
-                                Biryani • Vegetables</small>
+                            <small class="text-muted">• {{restaurantObj.restaurant_foodtype}}</small>
                         </h6>
                     </a>
                     <a href="#!" class="red-text">
                         <h6 class="font-weight-bold mb-3">
                             <mdb-icon fas icon="phone-volume" class="pr-2" size="lg"></mdb-icon>
-                            <small class="text-muted">+12345678900</small>
+                            <small class="text-muted">{{restaurantObj.restaurant_contact}}</small>
                         </h6>
                     </a>
                   <!-- <p> <small class="text-muted">Last updated 3 mins ago</small></p> -->
