--- a/src/app/views/dashboards/common/categories/categories.component.html
+++ b/src/app/views/dashboards/common/categories/categories.component.html
@@ -17,9 +17,9 @@
             <ul class="list-group list-group-horizontal" *ngFor="let item of slides; let i = index" style="width: 100%;overflow:auto;">
                 <li class="list-group-item" *ngFor="let card of item; let cardIndex = index">
                     <div class="my-1 _img">
-                        <img clss="cat-img zoom" [src]="card.img" alt="Card image cap"/>
+                        <img clss="cat-img zoom" [src]="card.category_img" alt="Card image cap"/>
                     </div>
-                    <a href="#" color="primary" class="waves-light" mdbWavesEffect>{{card.title}}</a>
+                    <a href="#" color="primary" class="waves-light" mdbWavesEffect>{{card.category_name}}</a>
                 </li>
             </ul>
         </div>
@@ -34,12 +34,12 @@
         <div class="container p-0 d-flex flex-wrap">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 card_parent row-col-eq ng-tns-c21-2 ng-star-inserted mb-4 mb-lg-0"
                *ngFor="let restro of restorantList;" >
-                <div class="card card_hover">
-                    <div class="card_inner">
+                <div class="card card_hover" >
+                    <div class="card_inner" >
                         <restaurant-tags class="ng-tns-c21-2 ng-star-inserted"
                             style="--closed_tag_top:15px; --closed_tag_bg_color:#d63230; --closed_tag_font_color:white; --preorder_tag_top:45px; --preorder_tag_bg_color:#ba68c8; --preorder_tag_font_color:#ffffff; --sponsored_tag_bottom:2px; --sponsored_tag_bg_color:#ffc058; --sponsored_tag_font_color:white;">
                         </restaurant-tags>
-                        <div class="card_image z-depth-1" mdbWavesEffect routerLink="../outlets-details/outlets">
+                        <div class="card_image z-depth-1" (click)="sendRestarunt(restro)" mdbWavesEffect routerLink="../outlets-details/outlets">
                             <img class="card_image_view"
                             [src]="restro.restaurant_logo">
                         </div>
