--- a/src/app/views/dashboards/common/categories/categories.component.scss
+++ b/src/app/views/dashboards/common/categories/categories.component.scss
@@ -30,7 +30,10 @@ a:not([href]):not([tabindex]), a:not([href]):not([tabindex]):focus, a:not([href]
     color: #eee;
 }
 
-
+.categories{
+    height: 200px;
+    overflow: hidden;
+}
 .carousel-item {
     &.active, &.carousel-item-right, &.carousel-item-next {
       display: flex !important;
