--- a/src/app/views/dashboards/common/categories/categories.component.html
+++ b/src/app/views/dashboards/common/categories/categories.component.html
@@ -17,9 +17,9 @@
             <ul class="list-group list-group-horizontal" *ngFor="let item of slides; let i = index" style="width: 100%;overflow:auto;">
                 <li class="list-group-item" *ngFor="let card of item; let cardIndex = index">
                     <div class="my-1 _img">
-                        <img clss="cat-img zoom" [src]="card.category_img" alt="Card image cap"/>
+                        <img clss="cat-img zoom" [src]="card.pcategory_img" alt="Card image cap"/>
                     </div>
-                    <a href="#" color="primary" class="waves-light" mdbWavesEffect>{{card.category_name}}</a>
+                    <a href="#" color="primary" class="waves-light" mdbWavesEffect>{{card.pcategory_name}}</a>
                 </li>
             </ul>
         </div>
