--- a/src/app/views/outlets-details/common/menu/menu.component.html
+++ b/src/app/views/outlets-details/common/menu/menu.component.html
@@ -1,21 +1,6 @@
 <div class="card z-depth-1">
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item _menu"><h4 class="font-weight-bold m-0">Menu</h4></li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Morbi leo risus</li>
-        <li class="list-group-item">Porta ac consectetur ac</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Morbi leo risus</li>
-        <li class="list-group-item">Porta ac consectetur ac</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Morbi leo risus</li>
-        <li class="list-group-item">Porta ac consectetur ac</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Morbi leo risus</li>
-        <li class="list-group-item">Porta ac consectetur ac</li>
-        <li class="list-group-item">Vestibulum at eros</li>
+        <li class="list-group-item" *ngFor="let menu of menus;let cardIndex = index" (click)="menuitemclick(menu)">{{menu.menu_name}}</li>
       </ul>
 </div>
