--- a/src/app/views/outlets-details/common/products/products.component.html
+++ b/src/app/views/outlets-details/common/products/products.component.html
@@ -1,18 +1,18 @@
 <div class="scroll-product">
-<div class="card z-depth-1 border-0">
+<div class="card z-depth-1 border-0" style="min-height: 100px;">
 
 <!-- Small news -->
-<div class="single-news note">
+<div class="single-news note"  *ngIf="productsList">
 
     <!-- Grid row -->
-    <div class="row borderbottom" *ngFor="let products of productsList;let cardIndex = index">
+    <div class="row borderbottom" *ngFor="let products of productsList;let cardIndex = index" >
 
       <!-- Grid column -->
-      <div class="col-md-3 col-4 p-0-8">
+      <div class="col-md-3 col-4 p-0-8" *ngIf="products.id == menuid">
 
         <!--Image-->
         <div class="view overlay rounded z-depth-1">
-          <img class="img-fluid" [src]="products.img" alt="Sample image">
+          <img class="img-fluid" [src]="products.category_img" alt="Sample image">
           <a>
             <div class="mask rgba-white-slight waves-light" mdbWavesEffect></div>
           </a>
@@ -22,12 +22,12 @@
       <!-- Grid column -->
 
       <!-- Grid column -->
-      <div class="col-md-9 col-8">
+      <div class="col-md-9 col-8" *ngIf="products.id == menuid">
 
         <!-- Excerpt -->
         <div class="font-weight-bold d-flex dark-grey-text cart-plus-minus">
             <div class="col-lg-11 col-10 text-truncate pl-0 mb-2">
-                <p class="font-weight-bold dark-grey-text mb-1">{{products.name}}</p>
+                <p class="font-weight-bold dark-grey-text mb-1">{{products.category_name}}</p>
             </div>
             <a >
                 <span mdbWavesEffect class="badge red z-depth-1 text-white plus-minus"><mdb-icon fas icon="share-alt"></mdb-icon></span>
@@ -36,7 +36,7 @@
        
         <a href="#!" class="red-text">
             <h6 class="font-weight-bold mb-3">
-                <small class="text-muted">{{products.cat}}</small>
+                <small class="text-muted">{{products.category_on_off}}</small>
             </h6>
         </a>
         <div class="d-flex justify-content-between">
