--- a/src/app/views/dashboards/common/categories/categories.component.html
+++ b/src/app/views/dashboards/common/categories/categories.component.html
@@ -14,6 +14,10 @@
             </li>
         </ul> -->
         <div class="categories">
+            <div class="row" style="float: right;padding-right: 20px;">
+                <mdb-icon fas icon="angle-double-left" style="padding-right: 20px;" (click)="changeCategories('preview')"></mdb-icon>
+                <mdb-icon fas icon="angle-double-right" (click)="changeCategories('next')"></mdb-icon>
+            </div>
             <ul class="list-group list-group-horizontal" *ngFor="let item of slides; let i = index" style="width: 100%;overflow:auto;">
                 <li class="list-group-item" *ngFor="let card of item; let cardIndex = index">
                     <div class="my-1 _img">
