change login possition

--- a/src/app/main-layout/navigation/navigation.component.html
+++ b/src/app/main-layout/navigation/navigation.component.html
@@ -67,7 +67,7 @@
       <!-- Links -->
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link waves-light" (click)="openLoginModal()" mdbWavesEffect>Partner with us</a>
+          <a class="nav-link waves-light"  mdbWavesEffect>Partner with us</a>
         </li>
         <li class="nav-item">
           <a class="nav-link waves-light" mdbWavesEffect><mdb-icon fas icon="search"></mdb-icon> Search</a>
@@ -75,7 +75,7 @@
   
         <!-- Dropdown -->
         <li class="nav-item">
-            <a dropdownToggle mdbWavesEffect type="button" class="nav-link waves-light" data-toggle="modal" data-target="#basicExample" (click)="signin.show()"  mdbWavesEffect>
+            <a dropdownToggle mdbWavesEffect type="button" class="nav-link waves-light" data-toggle="modal" data-target="#basicExample" (click)="openLoginModal()"  mdbWavesEffect>
               <mdb-icon fas icon="user"></mdb-icon> Login</a>
         </li> 
           
